tests/misc/errors/typescript/invalid-jsx-1.ts
// https://www.typescriptlang.org/docs/handbook/release-notes/typescript-3-9.html#-and--are-now-invalid-jsx-text-characters

let directions = <div>Navigate to: Menu Bar > Tools > Options</div>
